feat: mapleir cleanup