@@ -1,5 +1,7 @@
 package org.mapleir.ir.code.stmt;
 
+import lombok.Getter;
+import lombok.Setter;
 import org.mapleir.ir.TypeUtils;
 import org.mapleir.ir.code.CodeUnit;
 import org.mapleir.ir.code.Expr;
@@ -11,10 +13,12 @@ import org.objectweb.asm.Opcodes;
 import org.objectweb.asm.Type;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 
+@Getter @Setter
 public class ReturnStmt extends Stmt {
-
+	// TODO: Add validation
 	private Type type;
 	private Expr expression;
 
@@ -25,32 +29,23 @@ public class ReturnStmt extends Stmt {
 	public ReturnStmt(Type type, Expr expression) {
 		super(RETURN);
 		this.type = type;
-		setExpression(expression);
-	}
-
-	public Type getType() {
-		return type;
-	}
-
-	public void setType(Type type) {
-		this.type = type;
-	}
-
-	public Expr getExpression() {
-		return expression;
+		this.setExpression(expression);
 	}
 
 	public void setExpression(Expr expression) {
-		writeAt(expression, 0);
+		if (this.expression != null) {
+			this.expression.unlink();
+		}
+
+		this.expression = expression;
+		if (expression != null)
+			expression.setParent(this);
 	}
 
+	@Deprecated
 	@Override
 	public void onChildUpdated(int ptr) {
-		if(ptr == 0) {
-			expression = read(0);
-		} else {
-			raiseChildOutOfBounds(ptr);
-		}
+		throw new UnsupportedOperationException("Deprecated");
 	}
 
 	@Override
@@ -87,7 +82,8 @@ public class ReturnStmt extends Stmt {
 	@Override
 	public void overwrite(Expr previous, Expr newest) {
 		if (expression == previous) {
-			expression = newest;
+			this.setExpression(newest);
+			return;
 		}
 
 		super.overwrite(previous, newest);
@@ -108,11 +104,7 @@ public class ReturnStmt extends Stmt {
 	}
 
 	@Override
-	public List<CodeUnit> traverse() {
-		final List<CodeUnit> self = new ArrayList<>(List.of(this));
-		if (expression != null)
-			self.addAll(expression.traverse());
-
-		return self;
+	public List<CodeUnit> children() {
+		return expression == null ? Collections.emptyList() : List.of(expression);
 	}
 }
